update hidden +gadfly option;