@@ -1,46 +1,65 @@
 (defproject {{ns-name}} "0.1.0-SNAPSHOT"
-  :min-lein-version "2.5.3"
+  :min-lein-version "2.7.1"
 
-  :dependencies [[org.clojure/clojure "1.8.0"]
-                 [org.clojure/clojurescript "1.9.456"]
-                 [reagent "0.6.1"]
+  :dependencies [;; clojure(script)
+                 [org.clojure/clojure "1.9.0"]
+                 [org.clojure/clojurescript "1.10.238"]
+                 ;; react wrapper
+                 [reagent "0.8.1"]
+                 ;; ajax
                  [cljs-ajax "0.5.3"]
-                 [garden "1.3.2"]
-                 [secretary "1.2.3"]]
-
-  :plugins [[lein-cljsbuild "1.1.3"]
-            [lein-garden "0.3.0"]]
+                 ;; client-side routing
+                 [funcool/bide "1.6.0"]
+                 ;; css in clojure
+                 [garden "1.3.5"]
+                 ;; d3 wrapper
+                 [rid3 "0.2.1"]
+                 ;; notifications
+                 [cljsjs/noty "3.1.4-0"]]
 
   :clean-targets ^{:protect false} ["resources/public/js"
-                                    "resources/public/css"
                                     "target"]
 
-  :figwheel {:css-dirs ["resources/public/css"]}
-  :repl-options {:nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}
-
-  :source-paths ["src/css"]
-
   :garden {:builds [{:id           "screen"
-                     :source-paths ["src/css" "src/cljc"]
+                     :source-paths ["src/app"
+                                    "src/css"]
                      :stylesheet   {{name}}.css/screen
                      :compiler     {:output-to     "resources/public/css/screen.css"
                                     :pretty-print? true}}]}
 
-  :profiles
-  {:local
-   {:dependencies [[re-frisk "0.3.2"
-                    :exclusions [cljsjs/react cljsjs/react-dom]]
-                   [binaryage/devtools "0.9.0"]
-                   [figwheel-sidecar "0.5.4-3"]
-                   [com.cemerick/piggieback "0.2.1"]]
+  :figwheel {:css-dirs ["resources/public/css"]}
 
-    :plugins [[lein-doo "0.1.7"]
-              [lein-figwheel "0.5.9"]]}}
+  ;;https://github.com/bhauman/lein-figwheel/issues/612
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
+  :repl-options {:nrepl-middleware [cider.piggieback/wrap-cljs-repl]}
+
+  :source-paths ["src/app" "src/css"]
+  :test-paths ["src/app"]
+
+  :profiles
+  {:dev
+   {:dependencies [[re-frisk "0.5.3"
+                    :exclusions [cljsjs/react cljsjs/react-dom]]
+                   [binaryage/devtools "0.9.10"]
+                   [figwheel-sidecar "0.5.16"]
+                   [cider/piggieback "0.3.5"]
+                   [devcards "0.2.5"
+                    :exclusions [cljsjs/react cljsjs/react-dom]]
+                   ;; human-readable spec errors
+                   [expound "0.7.1"]]
+
+    :plugins [[lein-figwheel "0.5.16"]
+              [lein-cljsbuild "1.1.7"]
+              [lein-garden "0.3.0"]]}}
 
   :cljsbuild
   {:builds
-   [{:id           "dev"
-     :source-paths ["src/app" "env/dev" "src/cljc"]
+   [
+    ;; app
+    {:id           "dev"
+     :source-paths ["src/app"
+                    "env/dev"]
      :figwheel     {:on-jsload "{{name}}.core/reload"}
      :compiler     {:main                 "{{name}}.core"
                     :optimizations        :none
@@ -56,18 +75,37 @@
                       :print-config-overrides true}}}}
 
     {:id           "min"
-     :source-paths ["src/app" "env/prod" "src/cljc"]
+     :source-paths ["src/app"
+                    "env/prod"]
      :compiler     {:main            "{{name}}.core"
                     :optimizations   :advanced
                     :output-to       "resources/public/js/app.js"
                     :output-dir      "resources/public/js/min"
                     :closure-defines {goog.DEBUG false}
+                    :externs         ["externs.js"]
                     :pretty-print    false}}
 
-    {:id           "test"
-     :source-paths ["src/app" "src/test" "env/prod" "src/cljc"]
-     :compiler     {:main          "{{name}}.runner"
-                    :optimizations :none
-                    :output-to     "resources/public/js/test.js"
-                    :output-dir    "resources/public/js/test"}}
+
+    ;; devards
+    {:id           "devcards"
+     :source-paths ["src/app"
+                    "env/dev"]
+     :figwheel     {:devcards true}
+     :compiler     {:main                 "{{name}}.core-cards"
+                    :optimizations        :none
+                    :output-to            "resources/public/js/devcards.js"
+                    :output-dir           "resources/public/js/devcards"
+                    :asset-path           "js/devcards"
+                    :source-map-timestamp true}}
+
+    {:id           "hostedcards"
+     :source-paths ["src/app"
+                    "env/prod"]
+     :compiler     {:devcards      true
+                    :main          "{{name}}.core-cards"
+                    :optimizations :advanced
+                    :output-to     "resources/public/js/devcards.js"
+                    :output-dir    "resources/public/js/hostedcards"
+                    :externs         ["externs.js"]
+                    :closure-defines {goog.DEBUG false}}}
     ]})
